Basic example commands added - creation of develop reset a lot of changes

--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -8,7 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Classes\Services\**" />
+    <Compile Remove="Interfaces\**" />
+    <EmbeddedResource Remove="Classes\Services\**" />
+    <EmbeddedResource Remove="Interfaces\**" />
+    <None Remove="Classes\Services\**" />
+    <None Remove="Interfaces\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.8.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
