--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -8,16 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Classes\Services\**" />
-    <Compile Remove="Interfaces\**" />
-    <EmbeddedResource Remove="Classes\Services\**" />
-    <EmbeddedResource Remove="Interfaces\**" />
-    <None Remove="Classes\Services\**" />
-    <None Remove="Interfaces\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.8.1" />
+    <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
